--- a/view/light.twig
+++ b/view/light.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="{{ request.lang }}">
 <head>
-<base href="{{ BaseHref }}">
+<!-- <base href="{{ BaseHref }}"> -->
 <link rel="shortcut icon" href="favicon.ico">
 {% include 'meta.twig' %}
 <link href="vendor/components/jqueryui/themes/cupertino/jquery-ui.min.css" media="screen, print" rel="stylesheet" type="text/css">
