Add collaboration message for SILKNOW

--- a/view/concept-shared.twig
+++ b/view/concept-shared.twig
@@ -205,6 +205,11 @@
       {% endif %}
     </div>
     {% endfor %}
+    <div class="concept-appendix replaced">
+      <span class="versal">{% trans %}We're open to collaboration, feel free to send us your suggestions to{% endtrans %}
+        <a href="mailto:info@silknow.com">info@silknow.com</a>
+      </span>
+    </div>
 
   {% else %}
   <div class="alert alert-danger">
