--- a/view/vocab-shared.twig
+++ b/view/vocab-shared.twig
@@ -56,4 +56,9 @@
     </div>
     {% endif %}
   </div>
+  <div class="concept-appendix replaced">
+    <span class="versal">{% trans %}We're open to collaboration, feel free to send us your suggestions to{% endtrans %}
+      <a href="mailto:info@silknow.com">info@silknow.com</a>
+    </span>
+  </div>
 </div>
