get contact email from configuration

--- a/view/concept-shared.twig
+++ b/view/concept-shared.twig
@@ -235,7 +235,7 @@
     {% endfor %}
     <div class="concept-appendix replaced">
       <span class="versal">{% trans %}We're open to collaboration, feel free to send us your suggestions to{% endtrans %}
-        <a href="mailto:info@silknow.com">info@silknow.com</a>
+        <a href="mailto:{{ Mail }}">{{ Mail }}</a>
       </span>
     </div>
 
