--- a/view/vocab.twig
+++ b/view/vocab.twig
@@ -10,7 +10,7 @@
     {% endif %}
     <li id="hierarchy{% if not vocab.config.showHierarchy %}-disabled{% endif %}"{% if active_tab == 'hierarchy' %} class="active"{% endif %}><a href="#" id="hier-trigger"{% if not vocab.config.showHierarchy %} title="{% trans 'hierarchy-disabled-help' %}"{% endif %}>{% trans "Hier-nav" %}</a></li>
     {% if vocab.config.groupClassURI %}
-    <li id="groups"><a href="{{ request.vocabid }}/{{ request.lang }}/groups{% if request.contentLang != request.lang %}?clang={{ request.contentLang }}{% endif %}">{% trans "Group-nav" %}</a></li>
+    <li id="groups{% if not vocab.config.showGroups %}-disabled{% endif %}">{% if vocab.config.showGroups %}<a href="{{ request.vocabid }}/{{ request.lang }}/groups{% if request.contentLang != request.lang %}?clang={{ request.contentLang }}{% endif %}">{% endif %}{% trans "Group-nav" %}{% if vocab.config.showGroups %}</a>{% endif %}</li>
     {% endif %}
     {% if vocab.config.showChangeList %}
     <li id="changes"><a href="{{ request.vocabid }}/{{ request.lang }}/new{% if request.contentLang != request.lang %}?clang={{ request.contentLang }}{% endif %}">{% trans "Changes-nav" %}</a></li>
