--- a/view/light.twig
+++ b/view/light.twig
@@ -46,7 +46,7 @@
           {% endif %}
           <li id="hierarchy{% if not vocab.config.showHierarchy and not search_results|length == 1 %}-disabled{% endif %}"{% if search_results|length == 1 and not term %} class="active"{% endif %}><a href="#" id="hier-trigger"{% if not vocab.config.showHierarchy and not search_results|length == 1 %} title="{% trans 'hierarchy-disabled-help' %}"{% endif %}>{% trans "Hier-nav" %}</a></li>
           {% if vocab.config.groupClassURI %}
-          <li id="groups{% if not vocab.config.showGroups %}-disabled{% endif %}">{% if vocab.config.showGroups %}<a href="{{ request.vocabid }}/{{ request.lang }}/groups{% if request.contentLang != request.lang %}?clang={{ request.contentLang }}{% endif %}">{% endif %}{% trans "Group-nav" %}{% if vocab.config.showGroups %}</a>{% endif %}</li>
+          <li id="groups{% if not vocab.config.showGroups %}-disabled{% endif %}"><a {% if not vocab.config.showGroups %}href="{{ request.vocabid }}/{{ request.lang }}/groups{% if request.contentLang != request.lang %}?clang={{ request.contentLang }}{% endif %}"{% endif %}>{% trans "Group-nav" %}</a></li>
           {% endif %}
           {% if vocab.config.showChangeList %}
             <li id="changes"><a href="{{ request.vocabid }}/{{ request.lang }}/new{% if request.contentLang != request.lang %}?clang={{ request.contentLang }}{% endif %}">{% trans "Changes-nav" %}</a></li>
